# cortex

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: pages.yml
backend/: .env.example  Cargo.toml
backend/src/: auth.rs  config.rs  error.rs  main.rs  registry.rs
backend/src/models/: mod.rs
backend/src/routes/: agents.rs  auth.rs  chat.rs  health.rs  mcp.rs  mod.rs  models.rs  tools.rs  workflows.rs
docs/: index.html
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/login/: page.tsx
frontend/app/mcp/: page.tsx
frontend/app/models/: page.tsx
frontend/app/register/: page.tsx
frontend/app/tools/: page.tsx
frontend/app/workflows/: page.tsx
frontend/components/: ChatInterface.tsx  ChatMessage.tsx  ModelSelector.tsx  Sidebar.tsx
frontend/hooks/: useAuth.tsx
frontend/lib/: api.ts  pdf.ts  types.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/ui/alert/: alert-description.svelte  alert-title.svelte  alert.svelte  index.ts
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/agents/: +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/mcp/: +page.svelte
frontend/src/routes/models/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/tools/: +page.svelte
frontend/src/routes/workflows/: +page.svelte
(+19 files in other folders)
