[package]
name = "cortex-backend"
version = "0.1.0"
edition = "2021"
description = "Cortex AI Platform – Rust/Axum backend"

[[bin]]
name = "cortex-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
jsonwebtoken = "9"
bcrypt = "0.17"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
http = "1"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "17"
